--- a/ZooDrafto.fsproj
+++ b/ZooDrafto.fsproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="DomainTypes.fs" />
+    <Compile Include="DomainFunctions.fs" />
     <Compile Include="UseCases.fs" />
   </ItemGroup>
 </Project>
