--- a/ZooDrafto.fsproj
+++ b/ZooDrafto.fsproj
@@ -3,6 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CommonTypes.fs" />
     <Compile Include="DomainTypes.fs" />
     <Compile Include="DomainFunctions.fs" />
     <Compile Include="UseCases.fs" />
