--- a/ZooDrafto.fsproj
+++ b/ZooDrafto.fsproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net46</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CoreDraftTypes.fs" />
     <Compile Include="CommonTypes.fs" />
     <Compile Include="DomainTypes.fs" />
     <Compile Include="DomainFunctions.fs" />
