--- a/Tests/Tests.fsproj
+++ b/Tests/Tests.fsproj
@@ -1,13 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="CoreDraftTests.fs" />
+    <ProjectReference Include="..\Api\Api.fsproj" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Api\Api.fsproj" />
+    <Compile Include="CoreDraftTests.fs" />
+    <Compile Include="GameApiTests.fs" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
